@@ -7,6 +7,8 @@ Version 6.8.5 - not yet released
   - fix inverse colors in horizon page
 * devices
   - fix crash on malformed NMEA time stamp
+* Android
+  - improve Bluetooth LE compatibility (#3745)
 * Kobo
   - reduce ghosting on old Kobo models; regression due to screen
     flashing fix in 6.8.4 (#3756)
